--- a/myproject/myapp/templates/pocetna.html
+++ b/myproject/myapp/templates/pocetna.html
@@ -10,6 +10,11 @@
     <h2>Dobrodošli!</h2>
     {% if korisnik.is_authenticated %}
         <p>Prijavljeni ste kao: {{ korisnik.username }}</p>
+        <!-- Add logout button if the user is logged in -->
+        <form action="{% url 'odjava' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Odjava</button>
+        </form>
     {% else %}
         <!-- Add login and registration buttons if the user is not logged in -->
         <a href="{% url 'prijava' %}">Prijava</a>
