--- a/myproject/myapp/templates/registracija.html
+++ b/myproject/myapp/templates/registracija.html
@@ -3,15 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>Registracija</title>
 </head>
 <body>
-    <h2>User Registration</h2>
+    <h2>Registracija</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Register</button>
+        <button type="submit">Registriraj se</button>
     </form>
 </body>
 </html>
