Profil, registracija, pocetna

--- a/myproject/myapp/templates/prijava.html
+++ b/myproject/myapp/templates/prijava.html
@@ -13,5 +13,6 @@
         {{ form.as_p }}
         <button type="submit">Prijava</button>
     </form>
+    <p>Nemate korisnički račun? <a href="{% url 'registracija' %}">Registrirajte se ovdje</a>.</p>
 </body>
 </html>
