--- a/myproject/myapp/templates/registracija.html
+++ b/myproject/myapp/templates/registracija.html
@@ -12,5 +12,6 @@
         {{ form.as_p }}
         <button type="submit">Registriraj se</button>
     </form>
+    <p>Već imate korisnički račun? <a href="{% url 'prijava' %}">Prijavite se ovdje</a>.</p>
 </body>
 </html>
