--- a/myproject/myapp/templates/pocetna.html
+++ b/myproject/myapp/templates/pocetna.html
@@ -10,6 +10,8 @@
     <h2>Dobrodošli!</h2>
     {% if korisnik.is_authenticated %}
         <p>Prijavljeni ste kao: {{ korisnik.username }}</p>
+        <!-- Add link to user profile -->
+        <a href="{% url 'profil' %}">Profil</a>
         <!-- Add logout button if the user is logged in -->
         <form action="{% url 'odjava' %}" method="post">
             {% csrf_token %}
