Moji oglasi, kreiraj oglas, admin

--- a/myproject/myapp/templates/kreiraj_oglas.html
+++ b/myproject/myapp/templates/kreiraj_oglas.html
@@ -36,6 +36,7 @@
     </script>
 </head>
 <body>
+    <a href="{% url 'pocetna' %}">Pocetna</a>
     <h2>Kreiraj Oglas</h2>
     <form method="post">
         {% csrf_token %}
