--- a/myproject/myapp/templates/pocetna.html
+++ b/myproject/myapp/templates/pocetna.html
@@ -1,4 +1,4 @@
-<!-- pocetna.html -->
+<!-- pocetna.html --> 
 <!DOCTYPE html>
 <html lang="hr">
 <head>
@@ -24,12 +24,12 @@
 
     <h3>Top kategorije:</h3>
     <ul>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Glazbala' %}">Glazbala</a></li>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Nekretnine' %}">Nekretnine</a></li>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Vozila' %}">Vozila</a></li>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Elektronika' %}">Elektronika</a></li>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Odjeća i obuća' %}">Odjeća i obuća</a></li>
-        <li><a href="{% url 'oglasi_po_kategoriji' 'Sport i rekreacija' %}">Sport i rekreacija</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'glazbala' %}">Glazbala</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'nekretnine' %}">Nekretnine</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'vozila' %}">Vozila</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'elektronika' %}">Elektronika</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'odjeca-i-obuca' %}">Odjeća i obuća</a></li>
+        <li><a href="{% url 'oglasi_po_kategoriji' 'sport-i-rekreacija' %}">Sport i rekreacija</a></li>
     </ul>
 </body>
 </html>
