--- a/myproject/myapp/templates/moji_oglasi.html
+++ b/myproject/myapp/templates/moji_oglasi.html
@@ -1,4 +1,3 @@
-<!-- moji_oglasi.html -->
 <!DOCTYPE html>
 <html lang="hr">
 
@@ -20,8 +19,8 @@
     <ul>
         {% for oglas in oglasi %}
         <li>
-            <strong>Naziv:</strong> {{ oglas.naziv }}<br>
-            <strong>Cijena:</strong> {{ oglas.cijena }}<br>
+            <strong>Naziv:</strong> <a href="{% url 'uredi_oglas' kategorija_url=oglas.kategorija.url oglas_naziv=oglas.naziv sifra=oglas.sifra %}">{{ oglas.naziv }}</a><br>
+            <strong>Cijena:</strong> {{ oglas.cijena }} €<br>
             <strong>Opis:</strong> {{ oglas.opis }}<br>
             <strong>Trajanje:</strong> {{ oglas.get_trajanje_display }}<br>
             <strong>Županija:</strong> {{ oglas.zupanija.naziv }}<br>
@@ -42,6 +41,10 @@
             {% else %}
             Nema slika.
             {% endif %}
+            <form action="{% url 'izbrisi_oglas' oglas_id=oglas.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit">Izbriši oglas</button>
+            </form>
         </li>
         {% empty %}
         <li>Nema oglasa.</li>
